# OpenSmartOffice

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  REQUIREMENTS.md
.github/workflows/: ci.yml
app/: CMakeLists.txt
cmake/: Findhttplib.cmake  Findlibzip.cmake  OsoCheckDeps.cmake  OsoModule.cmake
core/: CMakeLists.txt
core/dom/: CMakeLists.txt
core/dom/common/: CMakeLists.txt
core/dom/common/include/oso/dom/common/: DomNode.h  PropertyBag.h
core/dom/common/src/: DomNode.cpp  PropertyBag.cpp
core/dom/word/: CMakeLists.txt
core/dom/word/include/oso/dom/word/: WordDocument.h
core/dom/word/src/: WordDocument.cpp
core/facade/: CMakeLists.txt
core/facade/include/oso/facade/: DocumentFacade.h
core/facade/src/: DocumentFacade.cpp
core/ooxml/: CMakeLists.txt
core/ooxml/include/oso/ooxml/: ElementFactory.h  OoxmlSaxHandler.h
core/ooxml/src/: ElementFactory.cpp  OoxmlSaxHandler.cpp
docs/: ARCHITECTURE.md  DOM_DESIGN.md  INTERFACES.md  OOXML_MAPPING.md
infra/: CMakeLists.txt
infra/ooxml/common/: CMakeLists.txt
infra/ooxml/common/src/: ContentTypeRegistry.cpp  LibzipZipArchive.cpp  RelationshipMap.cpp
infra/ooxml/read/: CMakeLists.txt
infra/ooxml/read/src/: Libxml2Reader.cpp
infra/ooxml/write/: CMakeLists.txt
infra/ooxml/write/src/: Libxml2Writer.cpp
platform/: CMakeLists.txt
platform/base/: CMakeLists.txt
platform/base/include/oso/base/: Color.h  DocPath.h  ErrorCode.h  Geometry.h  Length.h  Result.h
platform/base/src/: ErrorCode.cpp
platform/concurrent/: CMakeLists.txt
platform/concurrent/include/oso/concurrent/: ITaskExecutor.h  QtTaskExecutor.h
platform/concurrent/src/: QtTaskExecutor.cpp
platform/io/: CMakeLists.txt
platform/io/include/oso/io/: IFileSystem.h  IStream.h
platform/io/src/: FileStream.cpp  MemoryStream.cpp  NativeFileSystem.cpp
platform/logging/: CMakeLists.txt
platform/logging/include/oso/logging/: LogManager.h
platform/logging/src/: LogManager.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  test_core_facade.cpp  test_core_ooxml.cpp
tests/core/dom/: CMakeLists.txt  test_dom_common.cpp  test_dom_word.cpp
tests/infra/: CMakeLists.txt
tests/infra/ooxml/: CMakeLists.txt  gen_fixture.py  test_ooxml_common.cpp  test_ooxml_read.cpp  test_ooxml_write.cpp
tests/infra/ooxml/data/: minimal.docx
tests/platform/: CMakeLists.txt  test_base.cpp  test_concurrent.cpp  test_io.cpp  test_logging.cpp
(+9 files in other folders)
